Update and enable the debugging device selection check. Might shed some light on the problem in #4308.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32616 a95241bf-73f2-0310-859d-f6bbb57e9c96